Linq methods practice

--- a/AlperTungaLessons/YetgenAkbankJump2023-master/YetGenAkbankJump.IdentityMVC/YetGenAkbankJump.IdentityMVC.csproj
+++ b/AlperTungaLessons/YetgenAkbankJump2023-master/YetGenAkbankJump.IdentityMVC/YetGenAkbankJump.IdentityMVC.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\YetGenAkbankJump.Persistence\YetGenAkbankJump.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\email.-templates\" />
+  </ItemGroup>
+
 </Project>
