--- a/Homeworks/YetGenAkbankJump.MVCClient/YetGenAkbankJump.MVCClient.csproj
+++ b/Homeworks/YetGenAkbankJump.MVCClient/YetGenAkbankJump.MVCClient.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\YetGenAkbankJump.Shared\YetGenAkbankJump.Shared.csproj" />
+    <ProjectReference Include="..\YetGenAkbnakJump.Domain\YetGenAkbnakJump.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
